# NeoGenesis

./: .gitignore  PROTOCOL.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
packaging/: make-icon.py
packaging/linux/: 70-neogenesis-hyperx-mars.rules  deb-postinst.sh  install-udev-rules.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device.rs  lib.rs  main.rs  protocol.rs  transport.rs
src/components/: AnimationTab.tsx  CustomKeyboard.tsx  Deck.tsx  KeyboardChassis.tsx  KeyboardPreview.tsx  Logo.tsx  PerKeyTab.tsx  ProfileSelect.tsx  Sidebar.tsx  TopBar.tsx
src/components/custom/: BrushPanel.tsx  SelectionPanel.tsx  UsedColorsPanel.tsx
src/components/effects/: EffectCard.tsx  EffectSelect.tsx  EffectThumb.tsx  effects.ts
src/components/feedback/: ChangesRail.tsx  StatusBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx
src/hooks/: useEventLog.ts
src/lib/: busy.test.ts  busy.ts  changes.test.ts  changes.ts  keymap.test.ts  keymap.ts  legends.ts  types.ts
