[package]
name = "neo-genesis"
version = "0.1.0"
description = "Independent lighting control for the HyperX Mars keyboard"
authors = ["Neo Genesis contributors"]
edition = "2021"
# Two binaries exist (the app + the `spike` diagnostic CLI), so `cargo run`
# — which `tauri dev` invokes — needs to know which one is the app.
default-run = "neo-genesis"

[lib]
name = "mars_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
